--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "cryptomator-ts",
   "version": "0.0.1",
   "description": "Cryptomator library",
-  "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "author": "MangoCubes <10383115+MangoCubes@users.noreply.github.com>",
   "license": "MIT",
   "private": true,
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "dependencies": {
     "@stablelib/aes": "^1.0.1",
     "@stablelib/siv": "^1.0.2",
